# sdk-python

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CODING_GUIDELINES.md  CONTRIBUTING.md  LICENSE  PKG-INFO  PRESS.md  README.md  README.rst  pyproject.toml  sdk_generated.py  setup.cfg  setup.py
.cursor/rules/: role_playing.mdc  rules.mdc
.cursor/tasks/: order_request_update.md
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: cd.yml  cd_test_pypi.yml  ci.yml  mercado-pago-package.yml
docs/: index.html  sdk.html
docs/config/: config.html  index.html  request_options.html
docs/core/: index.html  mp_base.html
docs/http/: http_client.html  index.html
docs/mercadopago/: config.html  index.html  sdk.html
docs/resources/: advanced_payment.html  card.html  card_token.html  customer.html  disbursement_refund.html  identification_type.html  index.html  merchant_order.html  payment.html  payment_methods.html  preapproval.html  preference.html  refund.html  user.html
examples/instant-payment-notifications/: receive-ipn.aspx  receive-ipn.py
examples/order/: create_order_automatic_payment.py
examples/payment-search/: search-approved-payments.aspx  search-approved-payments.py  search-creditcard-payments.aspx  search-creditcard-payments.py  search-funded-payments-by-name.aspx  search-funded-payments-by-name.py  search-payments-from-email-and-date.aspx  search-payments-from-email-and-date.py  (+2 more)
lib/: mercadopago.py  setup.py
mercadopago/: SDK.py  __init__.py  async_sdk.py  card.py  cardtoken.py  config.py  customer.py  discountcampaign.py  genericcall.py  identificationtype.py  launch.py  mercadopago.py  mercadopagorestclient.py  merchantorder.py  mpexception.py  mpinvalidcredentials.py  mpssladapter.py  payment.py  preference.py  restclient.py  sdk.py  setup.py
tests/: .pylintrc  Test.cs  __init__.py  server.pem  test.py  test_advanced_payment.py  test_authentication.py  test_card.py  test_card_token.py  test_chargeback.py  test_customer.py  test_https_certificate_check.py  test_identification_type.py  test_invoice.py  test_mercadopago.py  test_merchant_order.py  test_oauth.py  test_order.py  test_order_checkout_pro.py  test_payment.py  test_payment_methods.py  test_plan.py  test_point.py  test_preapproval.py  test_preference.py  test_subscription.py  test_user.py  test_webhook_signature_validator.py  tests_sdk.py
(+119 files in other folders)
