[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mercadopago"
version = "2.3.0"
authors = [
    {name = "Mercado Pago", email = "mp_sdk@mercadopago.com"}
]
description = "Mercadopago SDK module for Payments integration"
readme = "README.md"
keywords = ["api", "mercadopago", "checkout", "payment in sdk integration", "lts"]
license = {file = "LICENSE"}
requires-python = ">=3.10"
dependencies = [
    "requests"
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[project.optional-dependencies]
testing = [
   "unittest"
]

[project.urls]
Homepage = "https://mercadopago.com"
Repository = "https://github.com/mercadopago/sdk-python"